# phys.p.crystal

./: .gitignore  README.md  crystal.py  pyproject.toml  requirements.txt  visualize.py
res/: gen_texture.py
src/: autoDyn.py  config.py  design_lattice.py  lattice_energy.py  main.py  sim.py  util.py  visualize.py
src/ui/: __init__.py  body_forces_panel.py  collabsible_box.py  constraints_panel.py  design_lattice.py  forces_panel.py  interatomic_panel.py  lattice_panel.py  limits_panel.py  miller_panel.py  scientific_spinbox.py  select_regions_panel.py  simulation_panel.py  visualize.py
