[project]
name = "phys-p-crystal"
version = "1.1.0"
description = "Simulate atoms in a crystal lattice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.16.0",
    "jax>=0.10.0",
    "jax-md>=0.2.28",
    "matplotlib>=3.10.9",
    "sympy>=1.14.0",
]

[project.optional-dependencies]
cuda13 = [
    "jax[cuda13]>=0.10.0",
]

[dependency-groups]
gui = [
    "pyqt6>=6.11.0",
    "pyqt6-datavisualization>=6.11.0",
]

[tool.uv]
default-groups = ["gui"]

